--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>歡迎來到甜點世界</title>
-    <link rel="stylesheet" href="css/Simple.css"> <!-- 引入 CSS 檔案 -->
+    <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
   </head>
 
   <body>
