--- a/about.html
+++ b/about.html
@@ -1,64 +1,68 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>關於</title>
-    <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
-  </head>
 
-  <body>
-    <!-- Header Section -->
-    <header>
-        <nav> 
-            <a href="index.html">首頁</a>
-            <a href="about.html"aria-current="page">關於</a>
-            <a href="blog/index.html">部落格</a>
-        </nav>
-       
-      <h1>關於甜點世界</h1>
-      <p>甜點融合甜蜜風味與精緻工藝，帶來視覺與味覺的雙重享受。
-      </p>
-    </header>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>關於</title>
+  <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
+</head>
 
-    <!-- Main Content Section -->
-    <main>
-      <section>
-        <img src="images/cupetit1-66fbaa2eb7f45.avif" alt="甜點的照片" class="image-banner" />
-      </section>
+<body>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <a href="index.html">首頁</a>
+      <a href="about.html" aria-current="page">關於</a>
+      <a href="blog/index.html">部落格</a>
+      <a href="resume.html">簡歷</a>
+      <a href="fun.html">Fun!</a>
+    </nav>
 
-      <section>
-        <p>
-          <text-align: justify;>
+    <h1>關於甜點世界</h1>
+    <p>甜點融合甜蜜風味與精緻工藝，帶來視覺與味覺的雙重享受。
+    </p>
+  </header>
+
+  <!-- Main Content Section -->
+  <main>
+    <section>
+      <img src="images/cupetit1-66fbaa2eb7f45.avif" alt="甜點的照片" class="image-banner" />
+    </section>
+
+    <section>
+      <p>
+        <text-align: justify;>
           歡迎來到甜點的世界！甜點不只是美食，更是一種藝術、創意與幸福的結合。無論是品嚐一塊入口即化的蛋糕，還是親手製作精緻的甜點，每一道甜品都有它獨特的魅力。
 
-我熱愛甜點，並希望讓更多人發現它的美好。從經典的法式甜點到創新的手作點心，每一口都能帶來不同的驚喜與感動。如果你也喜歡甜點，歡迎加入我們的社群，一起分享與交流這份甜蜜的喜悅！
-</text-align:>
+          我熱愛甜點，並希望讓更多人發現它的美好。從經典的法式甜點到創新的手作點心，每一口都能帶來不同的驚喜與感動。如果你也喜歡甜點，歡迎加入我們的社群，一起分享與交流這份甜蜜的喜悅！
+        </text-align:>
       </p>
-      </section>
+    </section>
 
-      <section>
-        <h2>我們的熱門蛋糕</h2>
-        <ul>
-          <li>粉漾莓果</li>
-          <li>莓果派對</li>
-          <li>草莓提拉米蘇</li>
-        </ul>
-      </section>
+    <section>
+      <h2>我們的熱門蛋糕</h2>
+      <ul>
+        <li>粉漾莓果</li>
+        <li>莓果派對</li>
+        <li>草莓提拉米蘇</li>
+      </ul>
+    </section>
 
-      <section>
-        <h2>我們的製作理念</h2>
-        <ol>
-          <li>精選新鮮材料</li>
-          <li>用心烘焙每一份甜點</li>
-          <li>呈現完美的味覺體驗</li>
-        </ol>
-      </section>
-    </main>
+    <section>
+      <h2>我們的製作理念</h2>
+      <ol>
+        <li>精選新鮮材料</li>
+        <li>用心烘焙每一份甜點</li>
+        <li>呈現完美的味覺體驗</li>
+      </ol>
+    </section>
+  </main>
 
-    <!-- Footer Section -->
-    <footer>
-      <p>感謝您了解甜點世界，期待與您分享更多甜蜜時光！</p>
-    </footer>
-  </body>
+  <!-- Footer Section -->
+  <footer>
+    <p>感謝您了解甜點世界，期待與您分享更多甜蜜時光！</p>
+  </footer>
+</body>
+
 </html>
