--- a/index.html
+++ b/index.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>歡迎來到甜點世界</title>
-    <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
-  </head>
 
-  <body>
-    <!-- Header Section -->
-    <header>
-      <nav> 
-        <a href="index.html" aria-current="page">首頁</a>
-        <a href="about.html">關於</a>
-        <a href="blog/index.html">部落格</a>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>歡迎來到甜點世界</title>
+  <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
+</head>
+
+<body>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <a href="index.html" aria-current="page">首頁</a>
+      <a href="about.html">關於</a>
+      <a href="blog/index.html">部落格</a>
+      <a href="resume.html">簡歷</a>
+      <a href="fun.html">Fun!</a>
     </nav>
-      <h1>甜點世界</h1>
-      <p>每一口甜點，都是對味蕾的溫柔擁抱，讓人瞬間忘記煩憂。</p>
-    </header>
+    <h1>甜點世界</h1>
+    <p>每一口甜點，都是對味蕾的溫柔擁抱，讓人瞬間忘記煩憂。</p>
+  </header>
 
-    <!-- Main Content Section -->
-    <main>
-      <section>
-        <img src="images/20190322141539_91.webp" alt="甜點的照片" class="image-banner" />
-      </section>
+  <!-- Main Content Section -->
+  <main>
+    <section>
+      <img src="images/20190322141539_91.webp" alt="甜點的照片" class="image-banner" />
+    </section>
 
-      <section>
-        <p>
-          想看看更多蛋糕嗎？ <br />
-          <a href="https://www.85cafe.com/Product.php?datatid=8&datasid=16" class="button">點擊這裡探索更多甜點！</a>
-        </p>
-      </section>
+    <section>
+      <p>
+        想看看更多蛋糕嗎？ <br />
+        <a href="https://www.85cafe.com/Product.php?datatid=8&datasid=16" class="button">點擊這裡探索更多甜點！</a>
+      </p>
+    </section>
 
-      <section>
-        <h2>我最喜歡的蛋糕</h2>
-        <ul>
-          <li>粉漾莓果</li>
-          <li>莓果派對</li>
-          <li>草莓提拉米蘇</li>
-        </ul>
-      </section>
+    <section>
+      <h2>我最喜歡的蛋糕</h2>
+      <ul>
+        <li>粉漾莓果</li>
+        <li>莓果派對</li>
+        <li>草莓提拉米蘇</li>
+      </ul>
+    </section>
 
-      <section>
-        <h2>如何製作蛋糕</h2>
-        <ol>
-          <li>準備材料並混合</li>
-          <li>倒入模具並烘烤</li>
-          <li>冷卻與裝飾</li>
-        </ol>
-      </section>
-    </main>
+    <section>
+      <h2>如何製作蛋糕</h2>
+      <ol>
+        <li>準備材料並混合</li>
+        <li>倒入模具並烘烤</li>
+        <li>冷卻與裝飾</li>
+      </ol>
+    </section>
+  </main>
 
-    <!-- Footer Section -->
-    <footer>
-      <p>感謝您參觀甜點世界，期待您的回來！</p>
-    </footer>
-  </body>
+  <!-- Footer Section -->
+  <footer>
+    <p>感謝您參觀甜點世界，期待您的回來！</p>
+  </footer>
+</body>
+
 </html>
-
