--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header>
     <nav>
       <a href="index.html" aria-current="page">首頁</a>
-      <a href="about.html">關於</a>
-      <a href="blog/index.html">部落格</a>
-      <a href="resume.html">簡歷</a>
+      <a href="story.html">我的故事</a>
+      <a href="blog/index.html">技能專區</a>
+      <a href="resume.html">學習歷程</a>
       <a href="fun.html">Fun!</a>
     </nav>
     <h1>甜點世界</h1>
