--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>歡迎來到甜點世界</title>
+  <title>歡迎來到我的學習旅程</title>
   <link rel="stylesheet" href="css/simple.css"> <!-- 引入 CSS 檔案 -->
 </head>
 
@@ -12,8 +12,8 @@
   <!-- Header Section -->
   <header>
     <nav>
-      <a href="index.html">首頁</a>
-      <a href="story.html">我的故事</a>
+      <a href="index.html">簡歷</a>
+      <a href="story.html">故事</a>
       <a href="blog/index.html">技能專區</a>
       <a href="resume.html"aria-current="page">學習歷程</a>
       <a href="fun.html">Fun!</a>
@@ -22,7 +22,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>感謝您參觀甜點世界，期待您的回來！</p>
+    <p>每個關卡、每個畫面，都是我學習與挑戰的成果。</p>
   </footer>
 </body>
 
