--- a/fun.html
+++ b/fun.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>歡迎來到甜點世界</title>
+  <title>歡迎來到遊戲專區</title>
   <link rel="stylesheet" href="css/simple.css"> <!-- 保留你原本的外部 CSS -->
   <style>
     .slot-machine {
@@ -59,8 +59,8 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">首頁</a>
-      <a href="story.html">我的故事</a>
+      <a href="index.html">簡歷</a>
+      <a href="story.html">故事</a>
       <a href="blog/index.html">技能專區</a>
       <a href="resume.html">學習歷程</a>
       <a href="fun.html" aria-current="page">Fun!</a>
@@ -79,7 +79,7 @@
   </div>
 
   <footer>
-    <p>感謝您參觀甜點世界，期待您的回來！</p>
+    <p>每個關卡、每個畫面，都是我學習與挑戰的成果。</p>
   </footer>
 
   <script>
